--- a/jekyll/_config.yml
+++ b/jekyll/_config.yml
@@ -17,7 +17,7 @@ cdn:
 favicon:
   url: http://www.47deg.com/assets/img/custom/favicon.png
 
-twitter: @47deg
+twitter: "@47deg"
 
 organization:
   url: http://www.47deg.com/
